--- a/.github/workflows/master-actions.yml
+++ b/.github/workflows/master-actions.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           java-version: 1.8
       - name: Step 2 - Build debug APK
-        run: bash ./gradle assembleDebug --stacktrace
+        run: bash ./gradlew assembleDebug --stacktrace
       - name: Step 3 - Upload APK
         uses: actions/upload-artifact@v1
         with:
